--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Zone</title>
   </head>
   <body>
+        <a>
           <svg
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:cc="http://creativecommons.org/ns#"
@@ -5901,6 +5902,7 @@
                  cx="117.47973"
                  cy="152.73122"
                  r="181.05" />
+                 <text x="185" y="170" fill="red">Z14</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5912,6 +5914,7 @@
                  cx="117.40428"
                  cy="152.87157"
                  r="168.98" />
+                 <text x="185" y="170" fill="red">Z13</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5923,6 +5926,7 @@
                  cx="117.3616"
                  cy="153.08557"
                  r="156.91" />
+                 <text x="185" y="170" fill="red">Z12</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5934,6 +5938,7 @@
                  cx="117.43247"
                  cy="152.96744"
                  r="144.84" />
+                 <text x="185" y="170" fill="red">Z11</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5945,6 +5950,7 @@
                  cx="117.55059"
                  cy="153.10918"
                  r="132.77" />
+                 <text x="185" y="170" fill="red">Z10</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5956,6 +5962,7 @@
                  cx="117.36474"
                  cy="152.97513"
                  r="120.7" />
+                 <text x="185" y="170" fill="red">Z9</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5967,6 +5974,7 @@
                  cx="117.68211"
                  cy="152.92503"
                  r="108.63" />
+                 <text x="185" y="170" fill="red">Z8</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5978,6 +5986,7 @@
                  cx="117.31437"
                  cy="152.89658"
                  r="96.559998" />
+                 <text x="185" y="170" fill="red">Z7</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5989,6 +5998,7 @@
                  cx="117.59784"
                  cy="153.01469"
                  r="84.489998" />
+                 <text x="185" y="170" fill="red">Z6</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6000,6 +6010,7 @@
                  cx="117.37341"
                  cy="152.97925"
                  r="72.419998" />
+                 <text x="185" y="170" fill="red">Z5</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6011,6 +6022,7 @@
                  cx="117.48166"
                  cy="153.12544"
                  r="60.349998" />
+                 <text x="185" y="170" fill="red">Z4</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6022,6 +6034,8 @@
                  cx="117.49516"
                  cy="152.99591"
                  r="48.279999" />
+                 <text x="185" y="170" fill="red">Z3</text>
+
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6033,6 +6047,8 @@
                  cx="117.61848"
                  cy="153.03969"
                  r="36.209999" />
+                 <text x="185" y="170" fill="red">Z2</text>
+
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6044,6 +6060,8 @@
                  cx="117.67366"
                  cy="153.02129"
                  r="24.139999" />
+                 <text x="185" y="170" fill="red">Z1</text>
+
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6053,8 +6071,11 @@
                  id="path884"
                  cx="117.48972"
                  cy="153.27882"
-                 r="12.07"/>
-            </g>
+                 r="12.07"  />
+
+              <text x="185" y="170" fill="red">Z0</text>
+             </g>
           </svg>
+      </a>
   </body>
 </html>
