--- a/index.html
+++ b/index.html
@@ -5902,6 +5902,12 @@
                  cx="117.47973"
                  cy="152.73122"
                  r="181.05" />
+
+                 <circle
+                    class="sous"
+                    cx="117.40428"
+                    cy="152.87157"
+                    r="168.98" />
                  <text x="185" y="170" fill="red">Z15</text>
             </g>
             <g
@@ -5914,6 +5920,12 @@
                  cx="117.40428"
                  cy="152.87157"
                  r="168.98" />
+
+                 <circle
+                    class="sous"
+                    cx="117.3616"
+                    cy="153.08557"
+                    r="156.91" />
                  <text x="185" y="170" fill="red">Z14</text>
             </g>
             <g
@@ -5926,6 +5938,12 @@
                  cx="117.3616"
                  cy="153.08557"
                  r="156.91" />
+
+                 <circle
+                    class="sous"
+                    cx="117.43247"
+                    cy="152.96744"
+                    r="144.84" />
                  <text x="185" y="170" fill="red">Z13</text>
             </g>
             <g
@@ -5938,6 +5956,12 @@
                  cx="117.43247"
                  cy="152.96744"
                  r="144.84" />
+
+                 <circle
+                    class="sous"
+                    cx="117.55059"
+                    cy="153.10918"
+                    r="132.77" />
                  <text x="185" y="170" fill="red">Z12</text>
             </g>
             <g
@@ -5950,6 +5974,12 @@
                  cx="117.55059"
                  cy="153.10918"
                  r="132.77" />
+
+                 <circle
+                    class="sous"
+                    cx="117.36474"
+                    cy="152.97513"
+                    r="120.7" />
                  <text x="185" y="170" fill="red">Z11</text>
             </g>
             <g
@@ -5962,6 +5992,12 @@
                  cx="117.36474"
                  cy="152.97513"
                  r="120.7" />
+
+                 <circle
+                    class="sous"
+                    cx="117.68211"
+                    cy="152.92503"
+                    r="108.63" />
                  <text x="185" y="170" fill="red">Z10</text>
             </g>
             <g
@@ -5974,6 +6010,12 @@
                  cx="117.68211"
                  cy="152.92503"
                  r="108.63" />
+
+                 <circle
+                    class="sous"
+                    cx="117.31437"
+                    cy="152.89658"
+                    r="96.559998" />
                  <text x="185" y="170" fill="red">Z9</text>
             </g>
             <g
@@ -5986,6 +6028,12 @@
                  cx="117.31437"
                  cy="152.89658"
                  r="96.559998" />
+
+                 <circle
+                    class="sous"
+                    cx="117.59784"
+                    cy="153.01469"
+                    r="84.489998" />
                  <text x="185" y="170" fill="red">Z8</text>
             </g>
             <g
@@ -5998,6 +6046,12 @@
                  cx="117.59784"
                  cy="153.01469"
                  r="84.489998" />
+
+                 <circle
+                    class="sous"
+                    cx="117.37341"
+                    cy="152.97925"
+                    r="72.419998" />
                  <text x="185" y="170" fill="red">Z7</text>
             </g>
             <g
@@ -6010,6 +6064,12 @@
                  cx="117.37341"
                  cy="152.97925"
                  r="72.419998" />
+
+                 <circle
+                    class="sous"
+                    cx="117.48166"
+                    cy="153.12544"
+                    r="60.349998" />
                  <text x="185" y="170" fill="red">Z6</text>
             </g>
             <g
@@ -6022,6 +6082,12 @@
                  cx="117.48166"
                  cy="153.12544"
                  r="60.349998" />
+
+                 <circle
+                    class="sous"
+                    cx="117.49516"
+                    cy="152.99591"
+                    r="48.279999" />
                  <text x="185" y="170" fill="red">Z5</text>
             </g>
             <g
@@ -6034,6 +6100,12 @@
                  cx="117.49516"
                  cy="152.99591"
                  r="48.279999" />
+
+                 <circle
+                    class="sous"
+                    cx="117.61848"
+                    cy="153.03969"
+                    r="36.209999" />
                  <text x="185" y="170" fill="red">Z4</text>
 
             </g>
@@ -6047,6 +6119,12 @@
                  cx="117.61848"
                  cy="153.03969"
                  r="36.209999" />
+
+                 <circle
+                    class="sous"
+                    cx="117.67366"
+                    cy="153.02129"
+                    r="24.139999"  />
                  <text x="185" y="170" fill="red">Z3</text>
 
             </g>
@@ -6059,7 +6137,13 @@
                  id="path881"
                  cx="117.67366"
                  cy="153.02129"
-                 r="24.139999" />
+                 r="24.139999"  />
+
+                 <circle
+                    class="sous"
+                    cx="117.48972"
+                    cy="153.27882"
+                    r="12.07"  />
                  <text x="185" y="170" fill="red">Z2</text>
 
             </g>
