--- a/index.html
+++ b/index.html
@@ -5931,6 +5931,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z15</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">153</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5956,6 +5965,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z14</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">143</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -5981,6 +5999,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z13</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">133</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6006,6 +6033,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z12</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">123</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6031,6 +6067,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z11</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">113</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6056,6 +6101,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z10</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">103</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6081,6 +6135,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z9</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">93</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6106,6 +6169,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z8</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">83</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6131,6 +6203,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z7</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">73</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6156,6 +6237,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z6</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">63</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6181,6 +6271,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z5</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">53</text>
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6206,6 +6305,15 @@
                        y="154.64784"
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z4</text>
+
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">43</text>
 
             </g>
             <g
@@ -6233,6 +6341,15 @@
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z3</text>
 
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">33</text>
+
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6259,6 +6376,15 @@
                        ry="4.4065208" />
                  <text x="185" y="170" fill="red">Z2</text>
 
+                 <rect
+                    width="22.892889"
+                    height="17.898077"
+                    x="183.14311"
+                    y="175"
+                    ry="4.4065208" />
+
+              <text x="185" y="190" fill="red">23</text>
+
             </g>
             <g
                inkscape:groupmode="layer"
@@ -6278,6 +6404,15 @@
                     ry="4.4065208" />
 
               <text x="185" y="170" fill="red">Z1</text>
+
+              <rect
+                 width="22.892889"
+                 height="17.898077"
+                 x="183.14311"
+                 y="175"
+                 ry="4.4065208" />
+
+           <text x="185" y="190" fill="red">13</text>
 
              </g>
 
@@ -6315,5 +6450,7 @@
 
           </svg>
       </a>
+
+
   </body>
 </html>
