--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <nav>
       <H2>VFHN Rouen</H2>
       <ul>
-        <li><a href="index.html">Rouen</a></li>
-        <li><a href="lehavre.html">Le Havre</a></li>
+        <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
       </ul>
     </nav>
       <div class="mapsvg">
