--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <nav>
       <H2>VFHN Rouen</H2>
       <ul>
-        <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
+        <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="Beta/index.html">Beta*</a></li>
       </ul>
     </nav>
       <div class="mapsvg">
-        
+
           <svg
              xmlns:dc="http://purl.org/dc/elements/1.1/"
              xmlns:cc="http://creativecommons.org/ns#"
@@ -6446,7 +6446,7 @@
               </g>
 
           </svg>
-      
+
     </div>
 
   </body>
