--- a/Beta/index.html
+++ b/Beta/index.html
@@ -44,7 +44,7 @@
         //map.locate({setView: true, maxZoom: 12});
 
         var VFico = L.icon({
-            iconUrl: "src/VFico.png",
+            iconUrl: "src/VINCIIco.png",
             shadowUrl: "src/VFIco-shadow.png",
             iconSize: [37, 37],
             shadowSize:   [76, 29],
