--- a/Beta/lehavre.html
+++ b/Beta/lehavre.html
@@ -41,7 +41,7 @@
         map.addLayer(osmLayer);
 
         var VFico = L.icon({
-            iconUrl: "src/VFico.png",
+            iconUrl: "src/VFIco.png",
             shadowUrl: "src/VFIco-shadow.png",
             iconSize: [37, 37],
             shadowSize:   [76, 29],
