--- a/Beta/index.html
+++ b/Beta/index.html
@@ -13,6 +13,25 @@
 
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto" rel="stylesheet">
 
+        <!-- Load Esri Leaflet from CDN -->
+        <script
+          src="https://unpkg.com/esri-leaflet@2.3.3/dist/esri-leaflet.js"
+          integrity="sha512-cMQ5e58BDuu1pr9BQ/eGRn6HaR6Olh0ofcHFWe5XesdCITVuSBiBZZbhCijBe5ya238f/zMMRYIMIIg1jxv4sQ=="
+          crossorigin=""
+        ></script>
+
+        <!-- Load Esri Leaflet Geocoder from CDN -->
+        <link
+          rel="stylesheet"
+          href="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.css"
+          integrity="sha512-IM3Hs+feyi40yZhDH6kV8vQMg4Fh20s9OzInIIAc4nx7aMYMfo+IenRUekoYsHZqGkREUgx0VvlEsgm7nCDW9g=="
+          crossorigin=""
+        />
+        <script
+          src="https://unpkg.com/esri-leaflet-geocoder@2.3.2/dist/esri-leaflet-geocoder.js"
+          integrity="sha512-8twnXcrOGP3WfMvjB0jS5pNigFuIWj4ALwWEgxhZ+mxvjF5/FBPVd5uAxqT8dd2kUmTVK9+yQJ4CmTmSg/sXAQ=="
+          crossorigin=""
+        ></script>
     </head>
 
     <body onload="initialize()">
@@ -49,6 +68,27 @@
             iconSize: [38, 37],
             shadowSize:   [76, 29],
             shadowAnchor: [20, 10]
+        });
+
+        //search tool
+
+        const searchControl = L.esri.Geocoding.geosearch().addTo(map);
+
+        const results = L.layerGroup().addTo(map);
+
+        let markers = [];
+
+        searchControl.on("results", function (data) {
+          markers = [];
+          console.log("data", data);
+          results.clearLayers();
+          // several results as several towns with same name (like)
+          for (var i = data.results.length - 1; i >= 0; i--) {
+            const result = data.results[i];
+            const marker = L.marker(result.latlng);
+            markers = [...markers, L.marker(marker)];
+            results.addLayer(marker);
+          }
         });
 
 
