--- a/Beta/index.html
+++ b/Beta/index.html
@@ -97,23 +97,23 @@
 
         L.marker([49.369900, 1.094159], { icon: VFico }).addTo(map).bindPopup('VHFN Rouen');
 
-        var Z9 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 90000}).addTo(map).bindPopup('Z9'),
+        var Z9 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 90000}).addTo(map).bindPopup('Zone 09'),
 
-        Z8 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 80000}).addTo(map).bindPopup('Z8'),
+        Z8 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 80000}).addTo(map).bindPopup('Zone 08'),
 
-        Z7 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 70000}).addTo(map).bindPopup('Z7'),
+        Z7 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 70000}).addTo(map).bindPopup('Zone 07'),
 
-        Z6 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 60000}).addTo(map).bindPopup('Z6'),
+        Z6 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 60000}).addTo(map).bindPopup('Zone 06'),
 
-        Z5 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 50000}).addTo(map).bindPopup('Z5'),
+        Z5 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 50000}).addTo(map).bindPopup('Zone 05'),
 
-        Z4 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 40000}).addTo(map).bindPopup('Z4'),
+        Z4 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 40000}).addTo(map).bindPopup('Zone 04'),
 
-        Z3 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 30000}).addTo(map).bindPopup('Z3'),
+        Z3 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 30000}).addTo(map).bindPopup('Zone 03'),
 
-        Z2 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 20000}).addTo(map).bindPopup('Z2'),
+        Z2 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 20000}).addTo(map).bindPopup('Zone 02'),
 
-        Z1 = L.circle([49.369900, 1.094159], {color: "#f03",opacity: 0,fillOpacity: 0, radius: 10000}).addTo(map).bindPopup('Z1');
+        Z1 = L.circle([49.369900, 1.094159], {color: "#f03",opacity: 0,fillOpacity: 0, radius: 10000}).addTo(map).bindPopup('Zone 01');
 
         function onLocationFound(e) {
             var radius = e.accuracy;
