test feuille d'heures

--- a/Beta/lehavre.html
+++ b/Beta/lehavre.html
@@ -45,7 +45,7 @@
         <nav>
           <H2>VFHN Le Havre</H2>
           <ul>
-            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
+            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="feuilleh.html">Feuille d'heure</a></li>
           </ul>
         </nav>
 
