--- a/Beta/index.html
+++ b/Beta/index.html
@@ -47,7 +47,7 @@
         <nav>
           <H2>VFHN Rouen</H2>
           <ul>
-            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
+            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="feuilleh.html">Feuille d'heure</a></li>
           </ul>
         </nav>
 
