--- a/Beta/lehavre.html
+++ b/Beta/lehavre.html
@@ -63,7 +63,7 @@
               </div>
         </div>
         <ul class="menu">
-            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="feuilleh.html">Demande CP</a></li>
+            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
         </ul>
       </nav>
 
