--- a/Beta/index.html
+++ b/Beta/index.html
@@ -69,7 +69,7 @@
         </ul>
       </nav>
 
-        <div id="map"></div>
+      <div id="map" class="map-div"></div>
 
     </body>
     <script src="JS/main.js"></script>
