--- a/Beta/index.html
+++ b/Beta/index.html
@@ -73,96 +73,95 @@
 
     </body>
     <script src="JS/main.js"></script>
-
-</html>
-<script type="text/javascript">
-    function initialize() {
-
-
-        var map = L.map('map').setView([49.369987, 1.094129], 8); // LIGNE 18
-
-        var osmLayer = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { // LIGNE 20
-            attribution: '© OpenStreetMap contributors',
-            maxZoom: 19,
-            minZoom: 8
-        });
-
-        map.addLayer(osmLayer);
-        //map.locate({setView: true, maxZoom: 12});
-
-        var VFico = L.icon({
-            iconUrl: "src/VFIco.png",
-            shadowUrl: "src/VFIco-shadow.png",
-            iconSize: [38, 37],
-            shadowSize:   [76, 29],
-            shadowAnchor: [20, 10]
-        });
-
-        //search tool
-
-        const searchControl = L.esri.Geocoding.geosearch().addTo(map);
-
-        const results = L.layerGroup().addTo(map);
-
-        let markers = [];
-
-        searchControl.on("results", function (data) {
-          markers = [];
-          console.log("data", data);
-          results.clearLayers();
-          // several results as several towns with same name (like)
-          for (var i = data.results.length - 1; i >= 0; i--) {
-            const result = data.results[i];
-            const marker = L.marker(result.latlng);
-            markers = [...markers, L.marker(marker)];
-            results.addLayer(marker);
+    <script type="text/javascript">
+      function initialize() {
+  
+  
+          var map = L.map('map').setView([49.369987, 1.094129], 8); // LIGNE 18
+  
+          var osmLayer = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', { // LIGNE 20
+              attribution: '© OpenStreetMap contributors',
+              maxZoom: 19,
+              minZoom: 8
+          });
+  
+          map.addLayer(osmLayer);
+          //map.locate({setView: true, maxZoom: 12});
+  
+          var VFico = L.icon({
+              iconUrl: "src/VFIco.png",
+              shadowUrl: "src/VFIco-shadow.png",
+              iconSize: [38, 37],
+              shadowSize:   [76, 29],
+              shadowAnchor: [20, 10]
+          });
+  
+          //search tool
+  
+          const searchControl = L.esri.Geocoding.geosearch().addTo(map);
+  
+          const results = L.layerGroup().addTo(map).bindPopup('Zone 06');
+  
+          let markers = [];
+  
+          searchControl.on("results", function (data) {
+            markers = [];
+            results.clearLayers();
+            console.log(data.text);
+            // several results as several towns with same name (like)
+            for (var i = data.results.length - 1; i >= 0; i--) {
+              const result = data.results[i];
+              const marker = L.marker(result.latlng);
+              markers = [...markers, L.marker(marker)];
+              results.addLayer(marker);
+            }
+          });
+          
+          
+          //Bp localisation
+  
+          L.easyButton('<img src="src/localisation.png">', function(btn, map){
+              map.locate({setView: true, maxZoom: 12});
+          }).addTo(map);
+  
+          //VFHN Marker
+  
+          L.marker([49.369900, 1.094159], { icon: VFico }).addTo(map).bindPopup('VHFN Rouen');
+  
+          var Z9 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 90000}).addTo(map).bindPopup('Zone 09'),
+  
+          Z8 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 80000}).addTo(map).bindPopup('Zone 08'),
+  
+          Z7 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 70000}).addTo(map).bindPopup('Zone 07'),
+  
+          Z6 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 60000}).addTo(map).bindPopup('Zone 06'),
+  
+          Z5 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 50000}).addTo(map).bindPopup('Zone 05'),
+  
+          Z4 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 40000}).addTo(map).bindPopup('Zone 04'),
+  
+          Z3 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 30000}).addTo(map).bindPopup('Zone 03'),
+  
+          Z2 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 20000}).addTo(map).bindPopup('Zone 02'),
+  
+          Z1 = L.circle([49.369900, 1.094159], {color: "#f03",opacity: 0.2,fillOpacity: 0, radius: 10000}).addTo(map).bindPopup('Zone 01');
+  
+          function onLocationFound(e) {
+              var radius = e.accuracy;
+  
+              L.marker(e.latlng).addTo(map).bindPopup("Vous êtes ici");
+  
+  
           }
-        });
+          map.on('locationfound', onLocationFound);
+  
+          function onLocationError(e) {
+              alert("Vous avez refusé la localisation !");    //e.message
+          }
+  
+          map.on('locationerror', onLocationError);
+  
+      }
+    </script>
+</html>
 
-        //Bp localisation
-
-        L.easyButton('<img src="src/localisation.png">', function(btn, map){
-            map.locate({setView: true, maxZoom: 12});
-        }).addTo(map);
-
-        //VFHN Marker
-
-        L.marker([49.369900, 1.094159], { icon: VFico }).addTo(map).bindPopup('VHFN Rouen');
-
-        var Z9 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0.2,fillOpacity: 0, radius: 90000}).addTo(map).bindPopup('Zone 09'),
-
-        Z8 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 80000}).addTo(map).bindPopup('Zone 08'),
-
-        Z7 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 70000}).addTo(map).bindPopup('Zone 07'),
-
-        Z6 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 60000}).addTo(map).bindPopup('Zone 06'),
-
-        Z5 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 50000}).addTo(map).bindPopup('Zone 05'),
-
-        Z4 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 40000}).addTo(map).bindPopup('Zone 04'),
-
-        Z3 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 30000}).addTo(map).bindPopup('Zone 03'),
-
-        Z2 = L.circle([49.369900, 1.094159], {color: "blue",opacity: 0,fillOpacity: 0, radius: 20000}).addTo(map).bindPopup('Zone 02'),
-
-        Z1 = L.circle([49.369900, 1.094159], {color: "#f03",opacity: 0,fillOpacity: 0, radius: 10000}).addTo(map).bindPopup('Zone 01');
-
-        function onLocationFound(e) {
-            var radius = e.accuracy;
-
-            L.marker(e.latlng).addTo(map).bindPopup("Vous êtes ici");
-
-
-        }
-        map.on('locationfound', onLocationFound);
-
-        function onLocationError(e) {
-            alert("Vous avez refusé la localisation !");    //e.message
-        }
-
-        map.on('locationerror', onLocationError);
-
-    }
-
-
-</script>
