--- a/lehavre.html
+++ b/lehavre.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr">
     <head>
-        <title>Zone VFHN Le Havre</title>
+        <title>Zone VF Le Havre</title>
         
         <link rel="stylesheet" href="./CSS/app.css">
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -44,7 +44,7 @@
     <body onload="initialize()">
       <nav>
         <div class="navHead">
-            <H2>VFHN</H2>
+            <H2>VF</H2>
             <div class="buttonMenu">
                 <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   viewBox="0 0 283.535 283.535" style="enable-background:new 0 0 283.535 283.535;" xml:space="preserve">
@@ -62,7 +62,7 @@
                 </svg>
               </div>
         <ul class="menu">
-            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li>
+            <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="caen.html">Caen</a></li>
         </ul>
       </nav>
 
