--- a/lehavre.html
+++ b/lehavre.html
@@ -61,6 +61,7 @@
                   </g>
                 </svg>
               </div>
+        </div>
         <ul class="menu">
             <li><a href="index.html">Rouen</a></li><li><a href="lehavre.html">Le Havre</a></li><li><a href="caen.html">Caen</a></li>
         </ul>
